# netra

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.release  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
bpf/: xdp_filter.c
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  theme.ts  types.ts
frontend/src/__tests__/: aggregate.test.ts  format.test.ts
frontend/src/components/: SummaryCards.tsx  TopBar.tsx  TopTalkers.tsx  TrafficChart.tsx
frontend/src/hooks/: useNetraSocket.ts
frontend/src/utils/: aggregate.ts  format.ts
src/: main.rs  prometheus.rs  sse.rs
src/asn/: db.rs  download.rs  mod.rs
src/flow/: ipfix.rs  listener.rs  mod.rs  v5.rs  v9.rs  xdp.rs
src/pipeline/: mod.rs  window.rs
