[package]
name = "netra"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"

# Flow processing
ip_network = "0.4"
ip_network_table = "0.2"
dashmap = "6"
ahash = "0.8"
arc-swap = "1"
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"

# AF_XDP / BPF
aya = "0.13"

# ASN database
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
flate2 = "1"
serde_urlencoded = "0.7.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
